--- a/footbal_manager/footbal_manager.csproj
+++ b/footbal_manager/footbal_manager.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
     <Folder Include="_learning_support\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Colorful.Console" Version="1.2.10" />
+  </ItemGroup>
 </Project>
