--- a/footbal_manager/footbal_manager.csproj
+++ b/footbal_manager/footbal_manager.csproj
@@ -11,5 +11,6 @@
 
   <ItemGroup>
     <PackageReference Include="Colorful.Console" Version="1.2.10" />
+    <PackageReference Include="ConsoleTables" Version="2.4.1" />
   </ItemGroup>
 </Project>
